<resources>
    <string name="app_name">LiquorUser</string>

    <string name="faq_url">https://policies.google.com/faq?hl=en-US</string>
    <string name="terms_of_services_url">https://policies.google.com/terms?hl=en-US</string>
    <string name="privacy_policy_url">https://policies.google.com/privacy?hl=en-US</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="please_select_an_option">Please select an option</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="shop_local_stores_for_alcohol_delivered_in_60_minutes">Shop local stores for alcohol\n delivered in 60 minutes.</string>
    <string name="plus_we_ve_got_a_bear_logo_so_that_s_something">Plus, we\'ve got a bear logo. So that\'s something.</string>
    <string name="welcome_to_liquor">Welcome to Liquor</string>
    <string name="enter_address_to_start_shopping">Enter address to start shopping</string>
    <string name="then_enjoy_a_drink_it_s_why_we_do_this_it_s_why_you_re_here">Then enjoy a drink. It\'s why we do\n this. It\'s why you\'re here.</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="text_continue">Continue</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="continue_with_facebook">Continue with Facebook</string>

    <string name="title_welcome">Welcome</string>
    <string name="title_reset_password">Password Reset</string>
    <string name="or">OR</string>
    <string name="log_in">Log in</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email_and_we_ll_send_you_instructions_on_how_to_rest_your_password">Enter your email and we\'ll send you instructions on how to rest your password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_delivery_address_to_see_product_in_your_area">Enter your delivery address\n to see product in your area.</string>
    <string name="work">Work</string>
    <string name="custom">Custom</string>
    <string name="apt_floor_company_optional">Apt # / floor / company (optional)</string>

    <string name="title_signup_one">Sign up (1 of 2)</string>
    <string name="title_signup_two">Sign up (2 of 2)</string>
    <string name="just_a_few_account_details_you_ll_we_ready_to_shop">Just a few account details\n you\'ll we ready to shop!</string>
    <string name="full_name">Full name</string>
    <string name="birthday">Birthday</string>
    <string name="phone">Phone</string>
    <string name="ordering_for_a_business_be_the_office_hero">Ordering for a business? Be the office hero</string>
    <string name="sign_up">Sign up</string>
    <string name="by_signing_up_i_m_agreeing_to_alcohol_s">By signing up I\'m agreeing to Alcohol\'s</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="home">Home</string>

    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_explore">Explore</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>
    <string name="delivery">Delivery</string>
    <string name="my_order">My Order</string>
    <string name="refer_a_friend">Refer a friend</string>
    <string name="account">Account</string>
    <string name="account_detail">Account Detail</string>
    <string name="my_review">My Review</string>
    <string name="payment_information">Payment information</string>
    <string name="notifications">Notifications</string>
    <string name="addresses">Addresses</string>
    <string name="help_more"><![CDATA[Help & more]]></string>
    <string name="alcohol_support_amp_resources"><![CDATA[Alcohol support & resources]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="title_contact_us">Contact Customer Support</string>
    <string name="faq">FAQ</string>
    <string name="terms_amp_services"><![CDATA[Terms & Services]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="acknowledgement">Acknowledgement</string>
    <string name="accessibility">Accessibility</string>
    <string name="interest_based_ads">Interest based ads</string>
    <string name="log_out">Log out</string>
    <string name="search_for_beer_wine">Search for beer, wine…</string>
    <string name="top_searches">Top searches</string>
    <string name="go_to_my_orders">Go to my orders</string>
    <string name="you_have_no_past_purchase">You have no past purchases</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="sort_by">Sort by</string>
    <string name="text_default">Default</string>
    <string name="you_have_no_saved_items">You have no saved items</string>
    <string name="look_for_the_heart_icon_on_products_to_save_them_to_your_favorites">Look for the heart icon on products to save them to your favorites.</string>
    <string name="liquor">Liquor</string>
    <string name="view_all">View all</string>
    <string name="beer">Beer</string>
    <string name="wine">Wine</string>
    <string name="extras">Extras</string>
    <string name="shop_now">Shop Now</string>
    <string name="hard_seltzer_amp_alternatives"><![CDATA[Hard Seltzer & Alternatives]]></string>
    <string name="cider">Cider</string>
    <string name="text_local">Local</string>
    <string name="share_your_promo_code">Share your promo code</string>
    <string name="get_5_when_they_do">Get $5 when they do.</string>
    <string name="give_your_friend_5_to_try_liquor">Give your friend $5 to try Liquor.</string>
    <string name="share">Share</string>
    <string name="minimum_order_applies_limited_time_offer_subject_to_additional_terms_and_conditions">Minimum order applies, Limited time offer,\n subject to additional Terms and Conditions.</string>
    <string name="filter_by">Filter by</string>
    <string name="all_orders">All orders</string>
    <string name="active_orders">Active orders</string>
    <string name="completed_order">Completed Order</string>
    <string name="canceled_orders">Canceled orders</string>
    <string name="update">Update</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="change">Change</string>
    <string name="add_new_address">Add new address</string>
    <string name="edit">Edit</string>
    <string name="name_on_card">Name on card</string>
    <string name="name">Name</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="zip_code">Zip code</string>
    <string name="save">Save</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="inbox_message">Inbox message</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="promotions">Promotions</string>
    <string name="push_order_updates">Push Order Updates</string>
    <string name="text_messages">Text Messages</string>
    <string name="sms_order_update">Sms Order Updates</string>
    <string name="additional_details">Additional Details*</string>
    <string name="submit">Submit</string>
    <string name="made_with_in_boston_ma">Made with in Boston, MA.</string>
    <string name="app_version">App version</string>
    <string name="build">Build</string>
    <string name="staff_picks">Staff Picks</string>
    <string name="licence">Licence</string>
    <string name="test_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.\n\n Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="email_us">Email Us</string>
    <string name="bottle">Bottle</string>
    <string name="get_it_now">Get It Now</string>
    <string name="get_it_later">Get It Later</string>
    <string name="shipping">Shipping</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="error_msg_item_not_available">Sorry, no selected store are available for ground shipping. Please choose different size, store, Get It Now or Get It Later.</string>
    <string name="product_review">Product Review</string>
    <string name="product_detail">Product Detail</string>
    <string name="show_all_details">Show All Details</string>
    <string name="write_a_review">Write A Review</string>
    <string name="show_all_reviews">Show all reviews</string>
    <string name="description">Description</string>
    <string name="your_reviews_will_help_other_customers">Your reviews will help other customers</string>
    <string name="done">Done</string>
    <string name="what_did_you_think">What did you think?</string>
    <string name="by_shopping_multiple_stores_you_can_see_more_products_available_to_you_but_may_receive_multiple_deliveries_and_delivery_fees">By shopping multiple stores, you can see more products available to you, but may receive multiple deliveries and delivery fees.</string>
    <string name="ok">Ok</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="customer_also_viewed">Customer also viewed</string>
</resources>
