<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_120"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BlackBold20spStyle"
        android:text="@string/welcome_to_liquor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_welcomeMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BlackRegular12spStyle"
        android:text="@string/shop_local_stores_for_alcohol_delivered_in_60_minutes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcomeTitle"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BlackRegular12spStyle"
        android:paddingTop="@dimen/dp_5"
        android:text="@string/plus_we_ve_got_a_bear_logo_so_that_s_something"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcomeMsg"/>
</androidx.constraintlayout.widget.ConstraintLayout>