<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:layout_weight="5"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/home_btn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/dp_5">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/home_off_icon"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            style="@style/RedRegular12spStyle"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_btn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/dp_5">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/search_off_icon"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            style="@style/RedRegular12spStyle"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/explore_btn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/dp_5">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/categories_off_icon"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            style="@style/RedRegular12spStyle"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/favorite_btn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/dp_5">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/tab_faviroite_off_icon"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            style="@style/RedRegular12spStyle"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_btn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/dp_5">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/profile_off_icon"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            style="@style/RedRegular12spStyle"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>